competed personal-site

--- a/portfolio/start/index.html
+++ b/portfolio/start/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Andy Park</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -192,22 +192,22 @@
                 </div>
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item social-icon">
-                    <a href="#">
+                    <a href="https://github.com/AndyPark20">
                       <i class="fab fa-github"></i>
                     </a>
                   </li>
                   <li class="list-inline-item social-icon">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/andypark20/">
                       <i class="fab fa-linkedin-in"></i>
                     </a>
                   </li>
                   <li class="list-inline-item social-icon">
-                    <a href="#">
+                    <a href="mailto:apark1214@gmail.com">
                       <i class="far fa-envelope"></i>
                     </a>
                   </li>
                   <li class="list-inline-item social-icon">
-                    <a href="#">
+                    <a href="https://docs.google.com/gview?url=https://github.com/AndyPark20/resume/raw/main/Andy_Park_Resume.pdf&embedded=true">
                       <i class="far fa-file"></i>
                     </a>
                   </li>
@@ -280,6 +280,135 @@
       </div>
     </div>
   </section>
+
+    <!-- Modal 1 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Flight Track 247</h2>
+                  <p class="item-intro text-muted">For aviation enthusiasts.</p>
+                  <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/flight.png" alt="FlightTrack247">
+                  <p class="description">Waiting for for my layover in many different airports, I started to grow an
+                    interest
+                    of where that Boeing 787 dreamliner or airbus A380 parked by gate 20 was going to.
+                    <br />
+                    With the combination of this interest and knowledge of programming, I decided to create Flight Track
+                    247, a full stack web and mobile responsive application.
+                  </p>
+                  <ul class="list-inline">
+                    <li class="projectInfo"><b>Developed using:</b> JavaScript(es6), React, CSS3, HTML5, Bootstrap5,
+                      PostgreSQL, Node.js </li>
+                    <li class="projectInfo"><b>Author:</b> Andy Park</li>
+                  </ul>
+                  <a href="https://github.com/AndyPark20/Flight-Track-247"><button class="btn btn-primary" type="button">
+                      <i class="fab fa-github"></i>
+                      GitHub</button></a>
+                  <a href="https://flight-track-247.herokuapp.com/"><button class="btn btn-primary" type="button">
+                      <i class="fas fa-headset"></i>
+                      Live</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">CarHealth+</h2>
+                  <p class="item-intro text-muted">Car's service and recall lists in one go</p>
+                  <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/carHealth.png" alt="carHealth+">
+                  <p class="description">Cars play a crucial role in our lives. They take us anywhere we need to go at any
+                    given moment.
+                    Which is why it is so important to keep up with all services and recalls it needs to take you and your
+                    family anywhere safely.
+                    With CarHealth+, an AJAX project application, will give you all the service list it needs based on the
+                    mileage entered.
+                    You can also see what kind of recalls and complaints are out there from NHTSA bulletin board to ensure
+                    the safety of the driver and passengers.
+                  </p>
+                  <ul class="list-inline">
+                    <li class="projectInfo"><b>Developed using:</b> JavaScript (es5 & es6), CSS3, HTML5</li>
+                    <li class="projectInfo"><b>Author:</b> Andy Park</li>
+                  </ul>
+                  <a href="https://github.com/AndyPark20/ajax-project"><button class="btn btn-primary" type="button">
+                      <i class="fab fa-github"></i>
+                      GitHub</button></a>
+                  <a href="https://car-health-plus.herokuapp.com/"><button class="btn btn-primary" type="button">
+                      <i class="fas fa-headset"></i>
+                      Live</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Planet Journal</h2>
+                  <p class="item-intro text-muted">Discovered a planet?</p>
+                  <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/planet.png" alt="Planet Journal">
+                  <p class="description">As our technology improves everyday, our ability to pierce through the uncharted
+                    territory of our
+                    universe advances as well.
+                    As a result, we find new planets at an increasing rate, which comes the question, "Are we alone in
+                    this universe?"
+                    Planet Journal is a simple application that allows user to save, edit, and delete information about
+                    the planet they've found. </p>
+                  <ul class="list-inline">
+                    <li class="projectInfo"><b>Developed using:</b> JavaScript (es5), CSS3, HTML5</li>
+                    <li class="projectInfo"><b>Author:</b> Andy Park</li>
+                  </ul>
+                  <a href="https://github.com/AndyPark20/planet-journal"><button class="btn btn-primary" type="button">
+                      <i class="fab fa-github"></i>
+                      GitHub</button></a>
+                  <a href="https://andypark20.github.io/planet-journal/"><button class="btn btn-primary" type="button">
+                      <i class="fas fa-headset"></i>
+                      Live</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   <!-- Skills -->
@@ -443,7 +572,7 @@
           <h2 class="section-heading text-uppercase contact-info-name">Andy Park</h2>
           <h3 class="section-subheading contact-subheading contact-style-heading">Actively looking for opportunites.</h3>
           <div class="col-lg-12 d-flex flex-column align-items-center justify-content-center">
-            <i class="fas fa-map-marker-alt alt spacing contact-style">&nbsp;Orange County, CA</i>
+            <i class="fas fa-map-marker-alt alt spacing">&nbsp;<span class="contact-style">Orange County, CA</span></i>
             <i class="far fa-envelope color spacing">
               <a href="mailto:apark1214@gmail.com" class="contact-style">&nbsp; apark1214@gmail.com</a>
             </i>
@@ -455,23 +584,23 @@
         <div class="col-lg-12 customized">
           <ul class="list-inline social-buttons ">
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
+              <a href="https://github.com/AndyPark20">
+                <i class="fab fa-github"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/andypark20/">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <a href="mailto:apark1214@gmail.com">
+                <i class="far fa-envelope"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://docs.google.com/gview?url=https://github.com/AndyPark20/resume/raw/main/Andy_Park_Resume.pdf&embedded=true">
+                <i class="far fa-file"></i>
               </a>
             </li>
           </ul>
@@ -485,16 +614,13 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-6">
-          <span class="copyright">Copyright &copy; Your Website 2018</span>
+          <span class="copyright">Copyright &copy; Andy Park 2021</span>
         </div>
 
         <div class="col-12 col-md-6">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <p>All visible logos on site are property of their respective owners</p>
             </li>
           </ul>
         </div>
@@ -504,134 +630,7 @@
 
   <!-- Portfolio Modals -->
 
-  <!-- Modal 1 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Flight Track 247</h2>
-                <p class="item-intro text-muted">For aviation enthusiasts.</p>
-                <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/flight.png" alt="">
-                <p class="description">Waiting for for my layover in many different airports, I started to grow an
-                  interest
-                  of where that Boeing 787 dreamliner or airbus A380 parked by gate 20 was going to.
-                  <br />
-                  With the combination of this interest and knowledge of programming, I decided to create Flight Track
-                  247, a full stack web and mobile responsive application.
-                </p>
-                <ul class="list-inline">
-                  <li class="projectInfo"><b>Developed using:</b> JavaScript(es6), React, CSS3, HTML5, Bootstrap5,
-                    PostgreSQL, Node.js </li>
-                  <li class="projectInfo"><b>Author:</b> Andy Park</li>
-                </ul>
-                <a href="https://github.com/AndyPark20/Flight-Track-247"><button class="btn btn-primary" type="button">
-                    <i class="fab fa-github"></i>
-                    GitHub</button></a>
-                <a href="https://flight-track-247.herokuapp.com/"><button class="btn btn-primary" type="button">
-                    <i class="fas fa-headset"></i>
-                    Live</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Modal 2 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">CarHealth+</h2>
-                <p class="item-intro text-muted">Car's service and recall lists in one go</p>
-                <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/car.png" alt="">
-                <p class="description">Cars play a crucial role in our lives. They take us anywhere we need to go at any
-                  given moment.
-                  Which is why it is so important to keep up with all services and recalls it needs to take you and your
-                  family anywhere safely.
-                  With CarHealth+, an AJAX project application, will give you all the service list it needs based on the
-                  mileage entered.
-                  You can also see what kind of recalls and complaints are out there from NHTSA bulletin board to ensure
-                  the safety of the driver and passengers.
-                </p>
-                <ul class="list-inline">
-                  <li class="projectInfo"><b>Developed using:</b> JavaScript (es5 & es6), CSS3, HTML5</li>
-                  <li class="projectInfo"><b>Author:</b> Andy Park</li>
-                </ul>
-                <a href="https://github.com/AndyPark20/ajax-project"><button class="btn btn-primary" type="button">
-                    <i class="fab fa-github"></i>
-                    GitHub</button></a>
-                <a href="https://car-health-plus.herokuapp.com/"><button class="btn btn-primary" type="button">
-                    <i class="fas fa-headset"></i>
-                    Live</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 3 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Planet Journal</h2>
-                <p class="item-intro text-muted">Discovered a planet?</p>
-                <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/planet.png" alt="">
-                <p class="description">As our technology improves everyday, our ability to pierce through the uncharted
-                  territory of our
-                  universe advances as well.
-                  As a result, we find new planets at an increasing rate, which comes the question, "Are we alone in
-                  this universe?"
-                  Planet Journal is a simple application that allows user to save, edit, and delete information about
-                  the planet they've found. </p>
-                <ul class="list-inline">
-                  <li class="projectInfo"><b>Developed using:</b> JavaScript (es5), CSS3, HTML5</li>
-                  <li class="projectInfo"><b>Author:</b> Andy Park</li>
-                </ul>
-                <a href="https://github.com/AndyPark20/planet-journal"><button class="btn btn-primary" type="button">
-                    <i class="fab fa-github"></i>
-                    GitHub</button></a>
-                <a href="https://andypark20.github.io/planet-journal/"><button class="btn btn-primary" type="button">
-                    <i class="fas fa-headset"></i>
-                    Live</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
