--- a/portfolio/start/index.html
+++ b/portfolio/start/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>Andy Park</title>
+  <link rel="icon" href="./img/portfolio/favicon.png">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
