fixed visual portion of the site

--- a/index.html
+++ b/index.html
@@ -105,12 +105,9 @@
                   <h4 class="subheading">On the road 24/7</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted"> Rainy, snowy, or sunny, it didn't matter! As long as that flight wasn't
-                    cancelled, I was there
-                    on the other side of the country securing deals with local to global clients.
-                    No, it wasn't the high that I got from securing
-                    that multi-million dollar deals, but meeting and building relationships with new people around the
-                    world got me going!
+                  <p class="text-muted"> Soon after I graduated from University of California, Irvine, I jumped into the sales industry
+                    selling various products in both B2C and B2B settings. There was quite a lot of business travel involved, which gave me the opportunity to
+                    meet and collaborate with new people around the world.
                   </p>
                 </div>
               </div>
@@ -126,7 +123,7 @@
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">One valuable lesson that I've learned in sales is the importance
-                    of teamwork. Working cross functionally with management or engineering team, I quickly
+                    of teamwork. Working cross functionally with management or engineering teams, I quickly
                     realized that
                     nothing can be done alone, especially when there are so many moving parts!
                   </p>
@@ -169,7 +166,7 @@
                     That is when I decided to go full time as a student at LearningFuze. Even though it was one of the
                     most
                     intense 14 weeks of my life,
-                    I've gain so much knowledge in different tools like JavaScript,React, HTML5, CSS3, Node.js, and many
+                    I've gain so much knowledge in different tools like JavaScript, React, HTML5, CSS3, Node.js, and many
                     more!
                   </p>
                 </div>
