--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <title>Andy Park</title>
   <link rel="icon" href="./img/portfolio/favicon.png">
+  <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/69870979/109193761-8f949a80-774d-11eb-9a0f-947c5ddceec5.png" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
