--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </a>
                   </li>
                   <li class="list-inline-item social-icon">
-                    <a href="https://docs.google.com/gview?url=https://github.com/AndyPark20/resume/raw/main/Andy_Park_Resume.pdf&embedded=true">
+                    <a href="https://docs.google.com/gview?url=https://github.com/AndyPark20/resume/raw/main/Andy%20Park%20Resume_full_stack_AP1.pdf&embedded=true">
                       <i class="far fa-file"></i>
                     </a>
                   </li>
@@ -598,7 +598,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://docs.google.com/gview?url=https://github.com/AndyPark20/resume/raw/main/Andy_Park_Resume.pdf&embedded=true">
+              <a href="https://docs.google.com/gview?url=https://github.com/AndyPark20/resume/raw/main/Andy%20Park%20Resume_full_stack_AP1.pdf&embedded=true">
                 <i class="far fa-file"></i>
               </a>
             </li>
