working on updating portfolio.

--- a/index.html
+++ b/index.html
@@ -409,6 +409,49 @@
       </div>
     </div>
 
+      <!-- Modal 3 -->
+      <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+              <div class="lr">
+                <div class="rl"></div>
+              </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-8 mx-auto">
+                  <div class="modal-body">
+                    <!-- Project Details Go Here -->
+                    <h2 class="text-uppercase"></h2>
+                    <p class="item-intro text-muted">Discovered a planet?</p>
+                    <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/planet.png" alt="Planet Journal">
+                    <p class="description">As our technology improves everyday, our ability to pierce through the uncharted
+                      territory of our
+                      universe advances as well.
+                      As a result, we find new planets at an increasing rate, which comes the question, "Are we alone in
+                      this universe?"
+                      Planet Journal is a simple application that allows user to save, edit, and delete information about
+                      the planet they've found. </p>
+                    <ul class="list-inline">
+                      <li class="projectInfo"><b>Developed using:</b> JavaScript (es5), CSS3, HTML5</li>
+                      <li class="projectInfo"><b>Author:</b> Andy Park</li>
+                    </ul>
+                    <a href="https://github.com/AndyPark20/planet-journal"><button class="btn btn-primary" type="button">
+                        <i class="fab fa-github"></i>
+                        GitHub</button></a>
+                    <a href="https://andypark20.github.io/planet-journal/"><button class="btn btn-primary" type="button">
+                        <i class="fas fa-headset"></i>
+                        Live</button></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 
   <!-- Skills -->
   <section id="skills">
