--- a/index.html
+++ b/index.html
@@ -276,6 +276,20 @@
               discovered planets.<br /> <br /> <br /></p>
           </div>
         </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-eye fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/kanban.png" alt="ajax project intro page">
+            </a>
+            <div class="portfolio-caption">
+              <h4>CarHealth+</h4>
+              <p class="text-muted">A full-stack web andd mobile-responsive application that allows users to organize their tasks into todo, doing, and done.</p>
+            </div>
+          </div>
       </div>
     </div>
   </section>
