--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <img class="img-fluid" src="img/portfolio/kanban.png" alt="ajax project intro page">
             </a>
             <div class="portfolio-caption">
-              <h4>CarHealth+</h4>
+              <h4>Kanban Planner Board</h4>
               <p class="text-muted">A full-stack web andd mobile-responsive application that allows users to organize their tasks into todo, doing, and done.</p>
             </div>
           </div>
