adding new picture for kanban

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Planet Journal</h2>
                   <p class="item-intro text-muted">Discovered a planet?</p>
-                  <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/kanban.png" alt="Planet Journal">
+                  <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/kanbanui.png" alt="Planet Journal">
                     <p class="description">It can be very daunting to organize your to do list when there are so many to keep track of.
                       Kanban Board helps users organize their tasks by separating
                       it Todo, doing, Done. Also user can change the wallpaper to get a new look everytime they use Kanban board!</p>
