--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                   <h2 class="text-uppercase">Planet Journal</h2>
                   <p class="item-intro text-muted">Discovered a planet?</p>
                   <img class="img-fluid-custom d-block mx-auto" src="img/portfolio/kanbanui.png" alt="Planet Journal">
-                    <p class="description">It can be very daunting to organize your to do list when there are so many to keep track of.
+                    <p class="description">It can be very daunting to organize your to do list when there are so many to keep things to track of.
                       Kanban Board helps users organize their tasks by separating
                       it Todo, doing, Done. Also user can change the wallpaper to get a new look everytime they use Kanban board!</p>
                     <ul class="list-inline">
