--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Kanban Planner Board</h4>
-              <p class="text-muted">A full-stack web andd mobile-responsive application that allows users to organize their tasks into todo, doing, and done.</p>
+              <p class="text-muted">A full-stack web and mobile-responsive application that allows users to organize their tasks into todo, doing, and done.</p>
             </div>
           </div>
       </div>
